Fix PDF header layout  - page title vs doc title spacing

--- a/styles/pdf.css
+++ b/styles/pdf.css
@@ -37,7 +37,8 @@ li.toc span.inner{
 
 .pdf-header .left {
     float: left;
-    width: 40%;
+    font-size: 0.1em;
+    width: 50%;
     height: 15px;
     margin-top: 15px;
 }
@@ -54,8 +55,8 @@ li.toc span.inner{
 .pdf-header .right {
     float: right;
     font-size: 0.1em;
-    width: 60%;
-    height: 20px;
+    width: 50%;
+    height: 15px;
     text-align: right;
 }
 
